# lady-penelope

./: .Rbuildignore  .Rprofile  .gitignore  .gitpod.yml  .sourcery.yaml  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  README.md  lady-penelope.Rproj  pyproject.toml  requirements.dev.txt  requirements.txt  setup.R
.devcontainer/: Dockerfile  devcontainer.json  latex_devcontainer.json  post-create.sh  post_create.sh  r_devcontainer.json
.devcontainer/R/: Dockerfile  post-create.sh
.devcontainer/latex/: Dockerfile  devcontainer.json
.devcontainer/python/: devcontainer.json
.devcontainer/r/: Dockerfile  devcontainer.json  post-create.sh  post_create.sh
.github/: codespaces.json
.github/workflows/: build-docker-dev-image.yml  build-docker-image.yml  build-latex-docker-image.yml  build-python-docker-image.yml  build-r-docker-image.yml  run-all-tests.yml  run-tests.yml  test-python.yml  test-r.yml
R/: add_numbers.R  graph.r
data/processed/: records.csv
data/raw/: 2024_06_01.csv  2024_06_02.csv  observations.csv
docs/: conf.py
notebooks/: demo.Rmd  demo.ipynb
renv/: settings.json
reports/: presentation.tex
src/lady_penelope/: hello.py
src/lady_penelope/helpers/: config.py
src/lady_penelope/support/: file_finder.py  settings.py
tests/: testthat.R
tests/pytest/: dummy_test.py  file_finder_test.py
tests/pytest/helpers/: file_finder_service_test.py
tests/testthat/: test_add_two_numbers.R
