[project]
name = "lady_penelope"
version = "0.0.1"
authors = [{ name = "Joe Collins", email = "joejcollins@gmail.com" }]
description = "Data project template."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "debugpy",
    "ipykernel",
    "loguru",
    "mypy",
    "myst_parser",           # for documentation.
    "pre-commit",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "radian",
    "ruff",
    "sourcery",
    "sphinx",                # for documentation.
    "sphinx_rtd_theme",      # for documentation.
    "sphinxcontrib-mermaid", # for diagrams in the documentation.
    "tqdm",
]

[project.urls]
"homepage" = "https://github.com/joejcollins/lady-penelope"
"repository" = "https://github.com/joejcollins/lady-penelope"
"documentation" = "https://github.com/joejcollins/lady-penelope"

[tool.pytest.ini_options]
log_cli = false
addopts = ["-q", "--disable-warnings", "--cache-clear"]
testpaths = ["./tests/pytest"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I"]
lint.fixable = ["ALL"]
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true
